Fixed doc build process by changing @paragraphindent from 3mm to 1

--- a/doc/spec-sw.in
+++ b/doc/spec-sw.in
@@ -50,7 +50,7 @@
 @contents
 @end iftex
 
-@paragraphindent 3mm
+@paragraphindent 1
 
 @c ##########################################################################
 @node Top
