--- a/doc/spec-sw.in
+++ b/doc/spec-sw.in
@@ -52,7 +52,7 @@
 @contents
 @end iftex
 
-@paragraphindent 3mm
+@paragraphindent 1
 
 @c ##########################################################################
 @node Top
