--- a/tools/Makefile
+++ b/tools/Makefile
@@ -14,6 +14,7 @@ LIBSHARED = libspec.so
 PROGS = spec-cl spec-fwloader spec-vuart specmem
 PROGS += wr-dio-cmd wr-dio-pps wr-dio-agent wr-dio-ruler
 PROGS += stamp-frame
+PROGS += spec-dma-dump
 
 all: $(LIB) $(PROGS) $(LIBSHARED)
 
