Makefile: use kbuild variable 'src' instead of 'M' variable
The Kbuild writesin 'src' the correct path to the source code automatically.
This avoid us to explicitly write 'M' variable

Signed-off-by: Federico Vaga <federico.vaga@cern.ch>
Acked-by: Alessandro Rubini <rubini@gnudd.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -8,7 +8,7 @@ KBUILD_EXTRA_SYMBOLS := $(FMC_DRV)/Module.symvers
 
 GIT_VERSION = $(shell cd $(src); git describe --dirty --long --tags)
 
-ccflags-y += -I$M/include -I$(FMC_DRV)/include
+ccflags-y += -I$(src)/include -I$(FMC_DRV)/include
 ccflags-y += $(WR_NIC_CFLAGS)
 ccflags-y += -DGIT_VERSION=\"$(GIT_VERSION)\"
 
