Makefile: add missing CFLAGS while building loader-ll
Signed-off-by: Federico Vaga <federico.vaga@cern.ch>
Acked-by: Alessandro Rubini <rubini@gnudd.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -18,7 +18,7 @@ $(LIB): $(LIBOBJ)
 	ar r $@ $^
 
 loader-ll.o:	../kernel/loader-ll.c
-		${CC} -c $^ -I .
+		${CC} $(CFLAGS) -c $^ -I .
 
 clean:
 	rm -f *.o $(LIB) $(PROGS) *~
