adding flash-write/read tools moved from the wrpc-sw repository

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -6,14 +6,14 @@
 CFLAGS += -ggdb -Wall -fPIC -I../kernel $(EXTRACFLAGS)
 LDFLAGS += -L. -lspec
 
-LIB = libspec.a
-LIBOBJ = speclib.o loader-ll.o
+LIB = libspec.a libflash/libflash.a
+LIBOBJ = speclib.o loader-ll.o libflash/flash.o
 
 LIBSHARED = libspec.so
 
 PROGS = spec-cl spec-fwloader spec-vuart specmem
 PROGS += wr-dio-cmd wr-dio-pps wr-dio-agent wr-dio-ruler
-PROGS += stamp-frame
+PROGS += stamp-frame flash-write flash-read
 
 all: $(LIB) $(PROGS) $(LIBSHARED)
 
@@ -25,12 +25,12 @@ $(LIB): $(LIBOBJ)
 loader-ll.o:	../kernel/loader-ll.c
 		${CC} $(CFLAGS) -c $^ -I .
 
-$(LIBSHARED): $(LIB)
+$(LIBSHARED): libspec.a
 	${CC} -shared -o $@ -Wl,--whole-archive $^ -Wl,--no-whole-archive
 
 
 clean:
-	rm -f *.o $(LIB) $(PROGS) $(LIBSHARED) *~
+	rm -f *.o $(LIB) $(LIBOBJ) $(PROGS) $(LIBSHARED) *~
 
 # add the other unused targets, so the rule in ../Makefile works
 modules install modules_install:
