--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -24,4 +24,4 @@ install modules_install:
 clean:
 	rm -rf *.o *~  .*.cmd *.ko *.mod.c .tmp_versions Module.symvers \
 		Module.markers modules.order
-	rm -rf wr_nic/*.o wr_nic/*~
+	rm -rf wr_nic/*.o wr_nic/*~ wr_nic/.*.o.cmd
