use absolute paths in Makefiles
Use _ABS in Makefiles wherever possible.

Signed-off-by: Adam Wujek <adam.wujek@cern.ch>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -6,7 +6,7 @@ REPO_PARENT=$(shell /bin/pwd)/../..
 LINUX ?= /lib/modules/$(shell uname -r)/build
 
 # by default use the fmc-bus within the repository
-FMC_BUS ?= $(shell pwd)/../fmc-bus/
+FMC_BUS ?= ../fmc-bus/
 # FMC_BUS_ABS has to be absolut path, due to beeing passed to the Kbuild
 FMC_BUS_ABS ?= $(abspath $(FMC_BUS) )
 
