[tmp-btrain] tool to ctr/dbg wr_streamers and btrain
this tool needs to be later put in a proper repo/place. but for the
time being it was the easiest to have it here.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -19,6 +19,7 @@ LIBSHARED = libspec.so
 PROGS = spec-cl spec-fwloader spec-vuart specmem
 PROGS += wr-dio-cmd wr-dio-pps wr-dio-agent wr-dio-ruler
 PROGS += stamp-frame
+PROGS += wr_transmission
 
 all: $(LIB) $(PROGS) $(LIBSHARED)
 
