--- a/kernel/Kbuild
+++ b/kernel/Kbuild
@@ -24,6 +24,7 @@ obj-m += spec.o
 
 spec-y = spec-pci.o
 spec-y += spec-fmc.o
+spec-y += spec-sdb-scan.o
 spec-y += spec-i2c.o
 spec-y += loader-ll.o
 spec-y += spec-gpio-no.o
